--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "main": "index.js",
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.6.0",
@@ -22,8 +25,8 @@
     "webpack-dev-server": "^5.1.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack serve --config webpack.config.js"
+    "build": "webpack --config webpack.config.mjs",
+    "start": "webpack serve --config webpack.config.mjs"
   },
   "author": "",
   "license": "ISC",
